[build]
target = "avr-atmega328p.json"

[unstable]
build-std = ["core"]

[package]
name = "rust-arduino-blink"
version = "0.1.0"
authors = ["Alex Lapinski <contact@alexlapinski.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"

[dependencies.arduino-uno]
git = "https://github.com/Rhix/avr-hal"